# aspect-configure-repro

./: .bazeliskrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  repin.sh
.aspect/cli/: config.yaml
.github/workflows/: build.yml
hello-world/: BUILD.bazel  main.go
