load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello-world_lib",
    srcs = ["main.go"],
    importpath = "github.com/walkerburgin/configure_repro/hello-world",
    visibility = ["//visibility:private"],
    deps = ["@com_github_fatih_color//:color"],
)

go_binary(
    name = "hello-world",
    embed = [":hello-world_lib"],
    visibility = ["//visibility:public"],
)
